# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-age-python"
version = "0.0.7"
description = "Python driver support for Apache AGE"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["Graph Database", "Apache AGE", "PostgreSQL"]
authors = [
    {name = "Ikchan Kwon, Apache AGE", email = "dev-subscribe@age.apache.org"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "psycopg",
    "antlr4-python3-runtime==4.11.1",
]

[project.urls]
Homepage = "https://github.com/apache/age/tree/master/drivers/python"
Download = "https://github.com/apache/age/releases"

[tool.setuptools]
packages = ["age", "age.gen", "age.networkx"]
