# suggested by libtoolize
ACLOCAL_AMFLAGS = -I m4
DEFS = @DEFS@ \
	-DDEFAULT_CONFIGDIR=\"$(sysconfdir)\"

EXTRA_DIST = auth \
	context query_cache\
	parser  pool.h  pcp  pool_type.h pool_config.h  protocol  rewrite  version.h  utils  watchdog  config.h  config.h.in  pool_config_variables.h pgproto main
